<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/firstName"
            android:textSize="25sp"
            android:textAlignment="center"
            android:hint="@string/firstName"
            android:inputType="text"/>

        <EditText
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/lastName"
            android:textSize="25sp"
            android:textAlignment="center"
            android:hint="@string/lastName"
            android:inputType="text"/>

        <EditText
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/username"
            android:textSize="25sp"
            android:textAlignment="center"
            android:hint="@string/username"
            android:inputType="text"/>

        <EditText
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:id="@+id/password"
            android:textSize="25sp"
            android:hint="@string/password"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/PictureButton"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/picturePrompt" />

        <Button
            android:id="@+id/RegisterButton"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/register" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>